fix: fetch all campaigns linked to the store (#3499)
* fix: fetch all campaigns linked to the store

* fix: typescript

* fix: typescript
